# imu9dworkspace

./: Cargo.toml  LICENSE
.fleet/: settings.json
imu_app/: Cargo.toml  build.rs  memory.x
imu_app/.cargo/: config.toml
imu_app/src/: core_calibrate.rs  core_data_types.rs  core_filters.rs  core_temp_correction.rs  main.rs  sensor_hub_control.rs  shared_i2c.rs  simple_ring_buffer.rs
lis3mdl/: Cargo.toml
lis3mdl/src/: configs.rs  lib.rs  registers.rs
lsm6dsox/: Cargo.toml
lsm6dsox/src/: configs.rs  lib.rs  registers.rs  types.rs
scripts/: copy-elf.ps1  flash.ps1  kill-probe.ps1  probe-launch-blocking.ps1  probe-launch.ps1
